(update) add http ressource
